Training added but still wrong User

--- a/PasswordDetect/PasswordDetect/PasswordDetect.csproj
+++ b/PasswordDetect/PasswordDetect/PasswordDetect.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\BaseController.cs" />
+    <Compile Include="Controller\TrainingController.cs" />
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Handler\ErrorHandler.cs" />
     <Compile Include="Model\DetectionContext.cs" />
