Login und datalayer

--- a/PasswordDetect/PasswordDetect/PasswordDetect.csproj
+++ b/PasswordDetect/PasswordDetect/PasswordDetect.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Controller\LoginController.cs" />
     <Compile Include="Controller\TrainingController.cs" />
     <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Data\DataAccess.cs" />
     <Compile Include="Handler\ErrorHandler.cs" />
     <Compile Include="Model\DetectionContext.cs" />
     <Compile Include="Model\KeyInput.cs" />
