--- a/PasswordDetect/PasswordDetect/packages.config
+++ b/PasswordDetect/PasswordDetect/packages.config
@@ -3,5 +3,6 @@
   <package id="Accord" version="3.4.0" targetFramework="net452" />
   <package id="Accord.Math" version="3.4.0" targetFramework="net452" />
   <package id="Accord.Statistics" version="3.4.0" targetFramework="net452" />
+  <package id="BCrypt.Net" version="0.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
 </packages>
