--- a/PasswordDetect/PasswordDetect/packages.config
+++ b/PasswordDetect/PasswordDetect/packages.config
@@ -5,4 +5,5 @@
   <package id="Accord.Statistics" version="3.4.0" targetFramework="net452" />
   <package id="BCrypt.Net" version="0.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
 </packages>
