--- a/PasswordDetect/PasswordDetect/PasswordDetect.csproj
+++ b/PasswordDetect/PasswordDetect/PasswordDetect.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\packages\Accord.Statistics.3.4.0\lib\net45\Accord.Statistics.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac, Version=4.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.5.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="BCrypt.Net, Version=0.1.4141.31969, Culture=neutral, PublicKeyToken=f3bc8f8c31beeb49, processorArchitecture=MSIL">
       <HintPath>..\packages\BCrypt.Net.0.1.0\lib\net35\BCrypt.Net.dll</HintPath>
       <Private>True</Private>
@@ -79,14 +83,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\BaseController.cs" />
-    <Compile Include="Controller\ImportExportController.cs" />
+    <Compile Include="Controller\IImportExportController.cs" />
+    <Compile Include="Controller\ImportExportJsonController.cs" />
     <Compile Include="Controller\KeyInputController.cs" />
     <Compile Include="Controller\LoginController.cs" />
     <Compile Include="Controller\TrainingController.cs" />
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Data\DataAccess.cs" />
     <Compile Include="Data\Hashing.cs" />
-    <Compile Include="Handler\ErrorHandler.cs" />
+    <Compile Include="Handler\ConsoleErrorHandler.cs" />
+    <Compile Include="Handler\IErrorHandler.cs" />
+    <Compile Include="Shared.cs" />
     <Compile Include="Model\DetectionContext.cs" />
     <Compile Include="Model\KeyInput.cs" />
     <Compile Include="Model\Training.cs" />
@@ -97,6 +104,7 @@
     <Compile Include="View\ImportExportView.cs" />
     <Compile Include="View\LoginView.cs" />
     <Compile Include="View\MainView.cs" />
+    <Compile Include="View\MenuItem.cs" />
     <Compile Include="View\RegisterView.cs" />
     <Compile Include="View\TrainingView.cs" />
   </ItemGroup>
