--- a/PasswordDetect/PasswordDetect/packages.config
+++ b/PasswordDetect/PasswordDetect/packages.config
@@ -3,6 +3,7 @@
   <package id="Accord" version="3.4.0" targetFramework="net452" />
   <package id="Accord.Math" version="3.4.0" targetFramework="net452" />
   <package id="Accord.Statistics" version="3.4.0" targetFramework="net452" />
+  <package id="Autofac" version="4.5.0" targetFramework="net452" />
   <package id="BCrypt.Net" version="0.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
