--- a/PasswordDetect/PasswordDetect/PasswordDetect.csproj
+++ b/PasswordDetect/PasswordDetect/PasswordDetect.csproj
@@ -91,6 +91,8 @@
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Data\DataAccess.cs" />
     <Compile Include="Data\Hashing.cs" />
+    <Compile Include="Exceptions\PasswordDetectException.cs" />
+    <Compile Include="Exceptions\UserNotTrainedEnoughtException.cs" />
     <Compile Include="Handler\ConsoleErrorHandler.cs" />
     <Compile Include="Handler\IErrorHandler.cs" />
     <Compile Include="Shared.cs" />
